# FitFuckingFast

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
